# custom_implementations

./: .gitignore  README.md  pyproject.toml
kolmogorov_arnold_network/: kan.py  test_kan.ipynb
transformer/: attention.py  coders.py  decoder.py  embedding.py  encoder.py  generate_data.py  mlp.py  test_copy.ipynb  test_sort.ipynb  transformer.py  transformers.py  utils.py
transformer/EDA/SAMSum/: explore.ipynb
transformer/pre_training/: test_sort.ipynb
transformer/pre_training/sort_integer_lists/: dataset.py  generate_data.py  sort_task.ipynb  test_sort.ipynb
transformer/pre_training/text_summarization/: dataset.py  summarization_task.ipynb
transformer/pre_training_encoder_decoder/sort_integer_lists/: sort_task.ipynb
transformer/pre_training_encoder_decoder/text_summarization/: dataset.py  summarization_task.ipynb
transformer/pre_training_encoder_only/sorted_integer_list_MLM/: dataset.py  mlm_task.ipynb
transformer/src/: attention.py  decoder.py  decoding_strategies.py  encoder.py  mlp.py  train_utils.py  transformer.py  utils.py  validation_utils.py
transformer/tests/: generate_data.py  test_copy.ipynb
transformer/tokenization/byte_pair_encoding/: SAMSum_vocab_size_elbow.ipynb  get_tokenizers.py
transformer/tokenization/trained_tokenizers/SAMSum_BPE/: merges.txt  tokenizer.json  vocab.json
transformer/tokenization/trained_tokenizers/SAMSum_BPE/elbow/: tokenizer.json
transformer/tokenizers/byte_pair_encoding/: SAMSum_vocab_size_elbow.ipynb  get_tokenizers.py
transformer/tokenizers/trained_tokenizers/SAMSum_BPE/: tokenizer.json
