[project]
name = "langgraph-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fireducks>=1.3.2",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.3",
    "langgraph-cli>=0.3.6",
    "langsmith>=0.4.8",
    "llama-cpp-python>=0.3.14",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numba>=0.61.2",
    "numexpr>=2.11.0",
    "numpy>=2.2.6",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "playwright>=1.53.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchtext>=0.18.0",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]
